# rlcoding

./: .gitignore  README.md  requirements.txt
2022-23/ddp/: models.py  search-algorithms.ipynb  utils.py
2023-24/code/tabular-methods/mdp/: mdp-stay-quit.ipynb  pyproject.toml
2023-24/code/tabular-methods/mdp/mdp/: model.py
2024-25/: L0-basic-duels.ipynb  L0-gym-introduction.ipynb  L0.0-gym-introduction.ipynb  L0.1-basic-duels.ipynb  L0.2-basic-duels.ipynb  L1.0-tabular-agents-dp-backward-induction.ipynb  L1.1-tabular-agents-rl-algorithms.ipynb  L2.0-value-function-approximation.ipynb  L2.1-linear-function-approximation.ipynb  L3.0-linear-fa.ipynb  L3.1-baird.ipynb  L4.0-drl.ipynb  L4.1-dqn.ipynb  L5.0-reinforce.ipynb  L6.0-multiagent-rl.ipynb  L7-multiagent-rl.ipynb  L7.0-introduction-to-game-theory.ipynb  L8-introduction-to-game-theory.ipynb  README.md
2025-26/: README.md  lecture_01_gymnasium_tabular.ipynb  lecture_02_sarsa_montecarlo.ipynb  lecture_03_linear_vfa.ipynb  lecture_04_control_vfa.ipynb
code/rl/: demo-move-markov-chain.py  nb-random-walk.ipynb  pyproject.toml
code/rl/rl/scratch/: markov.py  utils.py
ddp/: algorithms.py  grid-movement.ipynb
gym/: baird.ipynb  overview.ipynb  playground.py  tutorial.ipynb
mdp/: algorithms.py  grid-move.ipynb  models.py  recycling-robot.html  recycling-robot.ipynb  recycling_robot.py  stay-quit-game.html  stay-quit-game.ipynb  stay_quit.py  transportation.html  transportation.ipynb  transportation.py  utils.py
rla/: algorithms.py  dungeon-adventure.ipynb  recycling-robot.html  recycling-robot.ipynb  utils.py
(+77 files in other folders)
