[tool.poetry]
name = "mdp"
version = "0.1.0"
description = "From scratch implementation of MDP tabular methods"
authors = ["Alfio Ferrara <alfio.ferrara@unimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
